<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="200dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/photo"
        android:textSize="@dimen/spacing_small"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnChooseFromGallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_gallery" />

    <Button
        android:id="@+id/btnOpenCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_photo" />
</LinearLayout>
