<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edtUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_edit_text"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="10dp" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_edit_text"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <Button
        android:id="@+id/btnCheckWithUnitTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/colorWhite" />

    <TextView
        android:id="@+id/tvNotificationBug"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorGray"
        android:padding="10dp"
        android:textSize="@dimen/font_big" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="10dp"
        android:text="@string/text_use_account"
        android:textSize="@dimen/font_big" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:weightSum="2">

        <ImageView
            android:id="@+id/imgSignUpWithGoodgle"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/colorRed"
            android:src="@drawable/ic_google" />

        <Space
            android:layout_width="20dp"
            android:layout_height="20dp" />

        <ImageView
            android:id="@+id/imgSignUpWithFacebook"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/colorBlue"
            android:src="@drawable/ic_facebook" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/text_remain_account"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/font_big" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/text_remain_password"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/font_big" />
</LinearLayout>
