<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/colorBlue"
android:orientation="vertical"
xmlns:android="http://schemas.android.com/apk/res/android" >
<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/colorBlueBell"
    android:gravity="center"
    android:textSize="@dimen/font_big"
    android:hint="@string/email"
    android:id="@+id/edtEmail"
    android:inputType="textEmailAddress"
    android:layout_marginTop="100dp"
    android:layout_marginLeft="80dp"
    android:background="@drawable/custom_textview"
    tools:ignore="HardcodedText,UnusedAttribute" />
<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/colorBlueBell"
    android:gravity="center"
    android:textSize="@dimen/font_big"
    android:hint="@string/password"
    android:inputType="textPassword"
    android:id="@+id/edtPassword"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="80dp"
    android:background="@drawable/custom_textview"
    tools:targetApi="lollipop" />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:textStyle="italic"
    android:textColor="@color/colorWhite"
    android:layout_marginLeft="150dp"
    android:text="@string/sign_up2"
    android:id="@+id/tvSignUp"
    android:gravity="center"
    android:textSize="30dp"/>
<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:text="@string/log_in"
    android:textStyle="bold"
    android:textSize="30dp"
    android:id="@+id/btnLogin"
    android:textColor="@color/colorWhite"
    android:layout_marginLeft="150dp"
    android:background="@color/colorBlue"/>

</LinearLayout>
