<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:background="@drawable/bg_main"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgMenuIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:src="@drawable/ic_menu_32" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:padding="15dp"
                    android:src="@drawable/ic_search_32" />
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="@dimen/spacing_small"
                android:text="@string/good_morning"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/font_larger" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/imgProfileImage"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="120dp"
                    android:layout_marginStart="120dp"
                    android:src="@drawable/hugh"
                    app:civ_border_color="@color/colorBlack"
                    app:civ_border_width="2dp" />

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="186dp"
                    android:layout_marginStart="186dp"
                    android:background="@drawable/custom_button"
                    android:gravity="center"
                    android:text="@string/ba_message"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/font_small" />

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:drawableLeft="@drawable/ic_arrow_left"
                android:drawableRight="@drawable/ic_arrow_right"
                android:gravity="center_horizontal"
                android:text="@string/february"
                android:textColor="@color/colorWhite"
                android:textSize="20dp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/spacing_small"
            android:paddingRight="@dimen/spacing_small"
            android:weightSum="7">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sun"
                android:textSize="@dimen/font_large" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/mon"
                android:textSize="@dimen/font_large" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tue"
                android:textSize="@dimen/font_large" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/web"
                android:textSize="@dimen/font_large" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/thu"
                android:textSize="@dimen/font_large" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/fri"
                android:textSize="@dimen/font_large" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sat"
                android:textSize="@dimen/font_large" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/spacing_small"
            android:paddingLeft="@dimen/spacing_small"
            android:paddingRight="@dimen/spacing_small"
            android:paddingTop="5dp"
            android:weightSum="7">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingLeft="@dimen/spacing_small"
                android:paddingStart="@dimen/spacing_small"
                android:text="@string/ngay_7"
                android:textSize="@dimen/font_large" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:background="@drawable/custom_button_month">

                <TextView
                    android:id="@+id/tvDate8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:paddingLeft="1dp"
                    android:text="@string/ngay_8"
                    android:textSize="@dimen/font_large" />

                <ImageView
                    android:layout_width="2dp"
                    android:layout_height="2dp"
                    android:layout_below="@id/tvDate8"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/custom_button_online" />
            </RelativeLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_verysmall"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingLeft="@dimen/spacing_large"
                android:paddingStart="@dimen/spacing_large"
                android:text="@string/ngay_9"
                android:textSize="@dimen/font_large" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/ngay_10"
                android:textSize="@dimen/font_large" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_verysmall"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tvDate11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:paddingLeft="@dimen/spacing_small"
                    android:paddingStart="@dimen/spacing_small"
                    android:text="@string/ngay_11"
                    android:textSize="@dimen/font_large" />

                <ImageView
                    android:layout_width="2dp"
                    android:layout_height="2dp"
                    android:layout_below="@id/tvDate11"
                    android:layout_marginLeft="28dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/custom_button_online" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tvDate12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:paddingLeft="@dimen/spacing_small"
                    android:paddingStart="@dimen/spacing_small"
                    android:text="@string/ngay_12"
                    android:textSize="@dimen/font_large" />

                <ImageView
                    android:layout_width="2dp"
                    android:layout_height="2dp"
                    android:layout_below="@id/tvDate12"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/custom_button_online" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:paddingLeft="@dimen/spacing_small"
                android:paddingStart="@dimen/spacing_small"
                android:text="@string/ngay_13"
                android:textSize="@dimen/font_large" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llProfile1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:id="@+id/tvProfile1"
                android:layout_width="8dp"
                android:layout_height="60dp"
                android:background="@color/colorWhite" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image2"
                android:layout_width="@dimen/ic_user_width"
                android:layout_height="@dimen/ic_user_height"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:src="@drawable/hugh"
                app:civ_border_color="@color/colorBlack"
                app:civ_border_width="2dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/spacing_large"
                    android:paddingStart="@dimen/spacing_large"
                    android:text="@string/new_subpage"
                    android:textSize="@dimen/font_normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/time_8am"
                    android:paddingLeft="@dimen/spacing_large"
                    android:paddingStart="@dimen/spacing_large"
                    android:textSize="@dimen/font_normal" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llProfile2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:id="@+id/tvProfile2"
                android:layout_width="8dp"
                android:layout_height="60dp"
                android:background="@color/colorWhite" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image3"
                android:layout_width="@dimen/ic_user_width"
                android:layout_height="@dimen/ic_user_height"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:src="@drawable/nancy"
                app:civ_border_color="@color/colorBlack"
                app:civ_border_width="2dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/spacing_large"
                    android:paddingStart="@dimen/spacing_large"
                    android:text="@string/catch_up_with_tom"
                    android:textSize="@dimen/font_normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hangouts"
                    android:paddingLeft="@dimen/spacing_large"
                    android:paddingStart="@dimen/spacing_large"
                    android:textSize="@dimen/font_normal" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llProfile3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:id="@+id/tvProfile3"
                android:layout_width="8dp"
                android:layout_height="60dp"
                android:background="@color/colorWhite" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image4"
                android:layout_width="@dimen/ic_user_width"
                android:layout_height="@dimen/ic_user_height"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:src="@drawable/nancy2"
                app:civ_border_color="@color/colorBlack"
                app:civ_border_width="2dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/spacing_large"
                    android:paddingStart="@dimen/spacing_large"
                    android:text="@string/lunch_with_diane"
                    android:textSize="@dimen/font_normal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/restaurant_comment"
                    android:paddingLeft="@dimen/spacing_large"
                    android:paddingStart="@dimen/spacing_large"
                    android:textSize="@dimen/font_normal" />
            </LinearLayout>

            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginLeft="70dp"
                android:src="@drawable/ic_add" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
