<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/custom_textview"
        android:backgroundTint="@color/colorBlueBell"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="20dp"
        tools:ignore="UnusedAttribute" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_textview"
        android:backgroundTint="@color/colorBlueBell"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="20dp"
        tools:ignore="UnusedAttribute"
        tools:targetApi="lollipop" />

    <EditText
        android:id="@+id/edtConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_textview"
        android:backgroundTint="@color/colorBlueBell"
        android:gravity="center"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textSize="20dp"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorBlue"
        android:text="@string/sign_up"
        android:textColor="@color/colorWhite"
        android:textSize="30dp"
        android:textStyle="bold" />
</LinearLayout>
