<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_verysmall"
        android:layout_marginTop="@dimen/spacing_verysmall"
        android:paddingEnd="@dimen/spacing_verysmall"
        android:paddingRight="@dimen/spacing_verysmall">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgProfile"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_profile"
            app:civ_border_color="@color/colorBlack"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/spacing_verysmall"
            android:layout_marginTop="@dimen/spacing_verysmall"
            android:text="@string/Name"
            android:textSize="20dp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imgDish"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginTop="@dimen/spacing_small" />

    <ImageView
        android:id="@+id/imgLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_dislike" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/spacing_verysmall"
        android:background="@color/colorPrimaryBlack" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_verysmall">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgCountlike"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_like" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvCountLike"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:paddingTop="@dimen/spacing_verysmall"
            android:text="@string/CountLike"
            android:textSize="20dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvNameComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_verysmall"
        android:layout_marginTop="@dimen/spacing_verysmall"
        android:text="@string/Name"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:text="@string/description"
        android:textSize="20dp"
        android:textStyle="italic" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_verysmall" />

</LinearLayout>
